substrate/frame/support/test/tests/pallet_ui/storage_multiple_renames.stderr
error: Invalid attribute: Duplicate attribute
  --> tests/pallet_ui/storage_multiple_renames.rs:37:3
   |
37 |     #[pallet::storage_prefix = "Baz"]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
